--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@faker-js/faker": "^7.3.0",
+    "@mapbox/search-js-react": "^1.0.0-beta.12",
     "@sanity/client": "^3.3.2",
+    "eslint-plugin-react-hooks": "^4.7.0-next-49f8254d6-20220722",
     "ethers": "^5.6.9",
     "mapbox-gl": "^2.9.2",
     "next": "12.2.2",
